--- a/SendMe/Views/Shared/_PaymentFailedPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentFailedPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="modal-dialog modal-sm" role="document">
             <div id="failedModalContent" class="modal-content">
                 <div class="modal-header modal-header-danger">
-                    <h1><i class="glyphicon glyphicon-thumbs-down"></i>There is a problem with the Payment</h1>
+                    <h1 style="color:white;"><i class="glyphicon glyphicon-thumbs-down"></i>There is a problem with the Payment</h1>
                 </div>
                 <div class="modal-body">
                     <div class="modal-body">
@@ -12,7 +12,7 @@
                             @ViewBag.PaymentMsg
                         </h4>
                         <p>
-                            <button type="button" class="btn btn-warning" id="declineMsgBtn">X Close</button>
+                            <button type="button" class="btn btn-danger" id="declineMsgBtn">X Close</button>
                         </p>
                         <hr />
                         <hr />
