--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -33,7 +33,7 @@
             </label>
             <div class="form-group">
                 <label for="donationMsg" class="form-control-label">Send a donation message:</label>
-                <textarea class="form-control" id="donationMsg" style="margin-top: 0px; margin-bottom: 0px; margin-left: 15px; height: 172px; min-width:400px" required></textarea>
+                <textarea class="form-control" id="donationMsg" style="margin-top: 0px; margin-bottom: 0px; margin-left: 15px; height: 172px; min-width:400px"></textarea>
                 <hr />
             </div>
             <button style="width:25%" id="paymentBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
