--- a/SendMe/Views/Shared/_PaymentSuccessPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentSuccessPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="modal-dialog modal-sm" role="document">
             <div id="successModalContent" class="modal-content">
                 <div class="modal-header modal-header-success">
-                    <h1><i class="glyphicon glyphicon-thumbs-up"></i>Payment Success</h1>
+                    <h1 style="color:#556080;"><i class="glyphicon glyphicon-thumbs-up"></i>Payment Success</h1>
                 </div>
                 <div class="modal-body">
                     <div class="modal-body">
