--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -157,14 +157,14 @@
 
                                                                     <!-------------MAP------------>
                                                                     <div class="container">
-                                                                        <div id="map" style="width: 500px; height: 300px; border: 5px solid #DADEE0;"></div><br />
+                                                                        <div id="map" style="width: 500px; height: 400px; border: 3px solid #DADEE0;"></div><br />
                                                                     </div>
 
                                                                     <!-----------Progress bar------------->
                                                                     <div class="col-sm-10">
                                                                         <div class="progress">
                                                                             <div id="progress-bar" class="progress-bar" role="progressbar"
-                                                                                 aria-valuemin="0" aria-valuemax="100">
+                                                                                 aria-valuemin="0" aria-valuemax="100"">
                                                                             </div>
                                                                         </div>
                                                                         <h3>
